# gmle-light

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: gmle.schema.yaml  gmle.yaml  gmle.yaml.example
config/spaces/: example.yaml
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  config.ts  errors.ts  global.ts  ingest.ts  items.ts  llm.ts  prompts.ts  runs.ts  spaces.ts  system.ts
frontend/src/components/: ErrorAlert.tsx  GlobalConfigSection.tsx  LLMProviderCard.tsx  Layout.tsx  LoadingSpinner.tsx
frontend/src/hooks/: useRunPolling.ts
frontend/src/lib/: config-descriptions.ts  utils.ts
frontend/src/pages/: ConfigPage.tsx  GlobalConfigPage.tsx  IngestPage.tsx  ItemDetailPage.tsx  ItemsPage.tsx  LLMConfigPage.tsx  PromptEditorPage.tsx  RunsPage.tsx  SpaceDetailPage.tsx  SpacesPage.tsx  SystemPage.tsx
gmle/app/adapters/: anki_client.py
gmle/app/cli/: audit.py  batch_generate.py  ingest.py  init.py  lint_queue.py  main.py  repair.py  system.py
gmle/app/config/: constants.py  env_loader.py  env_paths.py  getter.py  global_loader.py  loader.py  merger.py  paths.py  secrets.py  space_loader.py  yaml_io.py
gmle/app/cycle/: base_fetch.py  cycle_apply.py  (+3 more)
scripts/lib/: service_common.sh
scripts/service/: start_api.sh  status.sh  stop.sh
tests/: __init__.py  conftest.py
tests/unit/: test_placeholder.py
(+99 files in other folders)
